spacing fix

--- a/src/components/ScrollingIcons.css
+++ b/src/components/ScrollingIcons.css
@@ -125,5 +125,5 @@ h1 {
 
 /* Typewriter subtitle */
 .epithets {
-  margin-top: -6px;
+  margin-top: 16px;
 }
